  - Added a goitem <name> command (same function as goname, but for items)
  - Fixed a bug in the nukez command.
  - Fixed an issue with skillgain in the low levels.
  - Its no longer possible to equip movable>=2 items with doubleclicks.
  - Added the tilepattern command.
  - Fixed an issue with the magic property generator (splash damage and hit spell effects were happening far too often)
 * Misc. Changes:
 * Known Issues, Bugs, and Missing Features:
  - Some skills are still incomplete.
  - Spawn regions are incomplete.
    We welcome donated OSI-like spawn scripts!
  - Town/World regions are incomplete.
    We welcome donated OSI-like region scripts!
  - Possible that a few monsters are missing and/or incomplete.
  - Multis (Houses/Boats) are not currently supported.

Wolfpack 12.9.13 Beta (25. December 2004)
 * Core Changes:
  - Fixed meditation skillcheck in mana regeneration code.
  - Changed GM talk color.
  - Implemented the onCheckVictim event.
  - Implemented the onDoDamage event.
  - Stablemasters now remove the stabled pets from the follower list.
  - Corpses now decay in multis too.
  - Implemented a walktest command for testing walking.
  - Fixed several other walking bugs.
  - Implemented onRemoteUse for checking if an object that is in the belonging
    of another char may be used. First called for the using char, then for the
    owner of the object.
  - Implemented onSnooping that is called for the owner and for the player trying to
    open a container.
  - Fixed shop restock.
  - Fixed bug #0000364. (Vendors not selling items they bought)
  - Rewrote the vendor buy handler code.
  - Improved the configure script:
    Translations are disabled by default now.
    Cleaner output.
    Fixed a bug with MySQL library reporting.
  - The SectorMaps singleton has been renamed to MapObjects.
  - The deprecated RegionIterators have been removed.
  - The SectorIterators have also been replaced with a much faster iterator.